@@ -38,15 +38,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|FileNotFoundException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|IOException
 import|;
 end_import
@@ -54,11 +45,18 @@ begin_import
 import|import
 name|java
 operator|.
-name|nio
+name|util
 operator|.
-name|file
+name|Collection
+import|;
+end_import
+begin_import
+import|import
+name|java
 operator|.
-name|NoSuchFileException
+name|util
+operator|.
+name|Collections
 import|;
 end_import
 begin_import
@@ -765,6 +763,23 @@ operator|.
 name|getDataDir
 argument_list|()
 argument_list|)
+return|;
+block|}
+comment|/**    * Optionally allow the DirectoryFactory to request registration of some MBeans.    */
+DECL|method|offerMBeans
+specifier|public
+name|Collection
+argument_list|<
+name|SolrInfoMBean
+argument_list|>
+name|offerMBeans
+parameter_list|()
+block|{
+return|return
+name|Collections
+operator|.
+name|emptySet
+argument_list|()
 return|;
 block|}
 block|}
