@@ -44,16 +44,16 @@ name|java
 operator|.
 name|net
 operator|.
-name|URL
+name|URLEncoder
 import|;
 end_import
 begin_import
 import|import
 name|java
 operator|.
-name|net
+name|util
 operator|.
-name|URLEncoder
+name|Arrays
 import|;
 end_import
 begin_import
@@ -507,8 +507,6 @@ class|class
 name|HdfsDirectoryFactory
 extends|extends
 name|CachingDirectoryFactory
-implements|implements
-name|SolrInfoMBean
 block|{
 DECL|field|LOG
 specifier|public
@@ -2564,122 +2562,29 @@ expr_stmt|;
 block|}
 block|}
 block|}
-comment|// SolrInfoMBean methods
 annotation|@
 name|Override
-DECL|method|getName
+DECL|method|offerMBeans
 specifier|public
-name|String
-name|getName
-parameter_list|()
-block|{
-return|return
-name|getClass
-argument_list|()
-operator|.
-name|getSimpleName
-argument_list|()
-operator|+
-literal|"BlockCache"
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getVersion
-specifier|public
-name|String
-name|getVersion
-parameter_list|()
-block|{
-return|return
-name|SolrCore
-operator|.
-name|version
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getDescription
-specifier|public
-name|String
-name|getDescription
-parameter_list|()
-block|{
-return|return
-literal|"Provides metrics for the HdfsDirectoryFactory BlockCache."
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getCategory
-specifier|public
-name|Category
-name|getCategory
-parameter_list|()
-block|{
-return|return
-name|Category
-operator|.
-name|CACHE
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getSource
-specifier|public
-name|String
-name|getSource
-parameter_list|()
-block|{
-return|return
-literal|null
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getDocs
-specifier|public
-name|URL
-index|[]
-name|getDocs
-parameter_list|()
-block|{
-return|return
-literal|null
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getStatistics
-specifier|public
-name|NamedList
+name|Collection
 argument_list|<
-name|?
+name|SolrInfoMBean
 argument_list|>
-name|getStatistics
+name|offerMBeans
 parameter_list|()
 block|{
-if|if
-condition|(
-name|metrics
-operator|==
-literal|null
-condition|)
-block|{
 return|return
-operator|new
-name|NamedList
-argument_list|<
-name|Object
-argument_list|>
-argument_list|()
-return|;
-block|}
-return|return
-name|metrics
+name|Arrays
 operator|.
-name|getStatistics
-argument_list|()
+expr|<
+name|SolrInfoMBean
+operator|>
+name|asList
+argument_list|(
+name|MetricsHolder
+operator|.
+name|metrics
+argument_list|)
 return|;
 block|}
 block|}
