@@ -4860,6 +4860,73 @@ argument_list|(
 name|infoRegistry
 argument_list|)
 expr_stmt|;
+comment|// Allow the directory factory to register MBeans as well
+for|for
+control|(
+name|SolrInfoMBean
+name|bean
+range|:
+name|directoryFactory
+operator|.
+name|offerMBeans
+argument_list|()
+control|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"Registering JMX bean [{}] from directory factory."
+argument_list|,
+name|bean
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Not worried about concurrency, so no reason to use putIfAbsent
+if|if
+condition|(
+name|infoRegistry
+operator|.
+name|containsKey
+argument_list|(
+name|bean
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Ignoring JMX bean [{}] due to name conflict."
+argument_list|,
+name|bean
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|infoRegistry
+operator|.
+name|put
+argument_list|(
+name|bean
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|bean
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|bufferUpdatesIfConstructing
 argument_list|(
 name|coreDescriptor
