@@ -20,6 +20,15 @@ begin_import
 import|import
 name|java
 operator|.
+name|net
+operator|.
+name|URL
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Map
@@ -83,6 +92,34 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|SimpleOrderedMap
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|SolrCore
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|core
 operator|.
 name|SolrInfoMBean
@@ -111,6 +148,8 @@ class|class
 name|Metrics
 extends|extends
 name|SolrCacheBase
+implements|implements
+name|SolrInfoMBean
 block|{
 DECL|class|MethodCall
 specifier|public
@@ -468,12 +507,13 @@ argument_list|>
 name|stats
 init|=
 operator|new
-name|NamedList
-argument_list|<
-name|Number
-argument_list|>
-argument_list|()
+name|SimpleOrderedMap
+argument_list|<>
+argument_list|(
+literal|21
+argument_list|)
 decl_stmt|;
+comment|// room for one method call before growing
 name|long
 name|now
 init|=
@@ -943,6 +983,56 @@ name|value
 operator|/
 name|seconds
 argument_list|)
+return|;
+block|}
+comment|// SolrInfoMBean methods
+annotation|@
+name|Override
+DECL|method|getName
+specifier|public
+name|String
+name|getName
+parameter_list|()
+block|{
+return|return
+literal|"HdfsBlockCache"
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getDescription
+specifier|public
+name|String
+name|getDescription
+parameter_list|()
+block|{
+return|return
+literal|"Provides metrics for the HdfsDirectoryFactory BlockCache."
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getSource
+specifier|public
+name|String
+name|getSource
+parameter_list|()
+block|{
+return|return
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getDocs
+specifier|public
+name|URL
+index|[]
+name|getDocs
+parameter_list|()
+block|{
+return|return
+literal|null
 return|;
 block|}
 block|}
