@@ -267,6 +267,9 @@ Other Changes
 * SOLR-4839: Upgrade Jetty to 9.2.10.v20150310 and restlet-jee to 2.3.0
   (Bill Bell, Timothy Potter, Uwe Schindler, Mark Miller, shalin)
 
+* SOLR-7457: Make DirectoryFactory publishing MBeanInfo extensible.
+  (Mike Drob via Mark Miller)
+
 ==================  5.1.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
